--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: AutoDeployment
 
 # Controls when the workflow will run
 on:
@@ -34,6 +34,14 @@ jobs:
         with:
           hugo-version: '0.91.2'
           extended: true
+          
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.3.0
+        with:
+          node-version: 16.x
+      
+      - name: Postcss Ready
+        run: npm install postcss-cli postcss autoprefixer
 
       - name: Build
         run: hugo --minify
