--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,4 +52,5 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./public/
           
